syntax = "proto3";
package cosmos.staking.v2beta1;

import "gogoproto/gogo.proto";


option go_package = "github.com/cosmos/cosmos-sdk/x/staking/types";

message WhitelistDelegator {
  string validator_address = 1 [(gogoproto.moretags) = "yaml:\"validator_address\""];
  repeated string delegator_address = 2 [(gogoproto.moretags) = "yaml:\"delegator_address\""];
}